creacion cliente perfeccionada

--- a/src/main/resources/templates/creacion.html
+++ b/src/main/resources/templates/creacion.html
@@ -69,39 +69,39 @@
                     <label class="form-check-label" for="alergia2">Mariscos</label>
                 </div>
                 <div class="form-check">
-                    <input type="checkbox" class="form-check-input" id="alergia3" name="selectedAllergies" value="Mariscos">
+                    <input type="checkbox" class="form-check-input" id="alergia3" name="selectedAllergies" value="Frutos Rojos">
                     <label class="form-check-label" for="alergia3">Frutos Rojos</label>
                 </div>
                 <div class="form-check">
-                    <input type="checkbox" class="form-check-input" id="alergia4" name="selectedAllergies" value="Mariscos">
+                    <input type="checkbox" class="form-check-input" id="alergia4" name="selectedAllergies" value="Huevo">
                     <label class="form-check-label" for="alergia4">Huevo</label>
                 </div>
                 <div class="form-check">
-                    <input type="checkbox" class="form-check-input" id="alergia5" name="selectedAllergies" value="Mariscos">
+                    <input type="checkbox" class="form-check-input" id="alergia5" name="selectedAllergies" value="Leche">
                     <label class="form-check-label" for="alergia5"> Leche</label>
                 </div>
                 <div class="form-check">
-                    <input type="checkbox" class="form-check-input" id="alergia6" name="selectedAllergies" value="Mariscos">
+                    <input type="checkbox" class="form-check-input" id="alergia6" name="selectedAllergies" value="Soya">
                     <label class="form-check-label" for="alergia6">Soya</label>
                 </div>
                 <div class="form-check">
-                    <input type="checkbox" class="form-check-input" id="alergia7" name="selectedAllergies" value="Mariscos">
+                    <input type="checkbox" class="form-check-input" id="alergia7" name="selectedAllergies" value="Gluten">
                     <label class="form-check-label" for="alergia7">Gluten</label>
                 </div>
                 <div class="form-check">
-                    <input type="checkbox" class="form-check-input" id="alergia8" name="selectedAllergies" value="Mariscos">
+                    <input type="checkbox" class="form-check-input" id="alergia8" name="selectedAllergies" value="Nueces">
                     <label class="form-check-label" for="alergia8">Nueces</label>
                 </div>
                 <div class="form-check">
-                    <input type="checkbox" class="form-check-input" id="alergia9" name="selectedAllergies" value="Mariscos">
+                    <input type="checkbox" class="form-check-input" id="alergia9" name="selectedAllergies" value="Aditivos">
                     <label class="form-check-label" for="alergia9">Aditivos</label>
                 </div>
                 <div class="form-check">
-                    <input type="checkbox" class="form-check-input" id="alergia10" name="selectedAllergies" value="Mariscos">
+                    <input type="checkbox" class="form-check-input" id="alergia10" name="selectedAllergies" value="Alimentos similares al polen">
                     <label class="form-check-label" for="alergia10">Alimentos similares al polen</label>
                 </div>
                 <div class="form-check">
-                    <input type="checkbox" class="form-check-input" id="alergia11" name="selectedAllergies" value="Mariscos">
+                    <input type="checkbox" class="form-check-input" id="alergia11" name="selectedAllergies" value="Alimentos Crudos">
                     <label class="form-check-label" for="alergia11">Alimentos Crudos</label>
                 </div>
             </div>
