--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <title>Login - Restaurante</title>
+    <title>Login - FoodieExpress</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 
     <style>
@@ -52,7 +52,7 @@
 <div class="container">
     <div class="row">
         <div class="col-md-6 offset-md-3">
-            <h1 class="text-center">Restaurante </h1>
+            <h1 class="text-center">FoodieExpress</h1>
             <form action="/login" method="post">
                 <div class="form-group">
                     <label for="username">Nombre de usuario</label>
