--- a/src/main/resources/templates/confirmacion.html
+++ b/src/main/resources/templates/confirmacion.html
@@ -56,7 +56,7 @@
         <p>Si hay algún error, por favor regresa y corrige. De lo contrario, haz clic abajo para confirmar:</p>
         <div class="d-flex justify-content-between">
             <a href="/CrearCliente" class="btn btn-primary">Confirmar</a>
-            <a href="/ComenzarCero" class="btn btn-primary">cancelar</a>
+            <a href="/ComenzarCero" class="btn btn-secundary">cancelar</a>
         </div>
     </div>
 
