--- a/src/main/resources/templates/creacion.html
+++ b/src/main/resources/templates/creacion.html
@@ -1,11 +1,49 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <title>Foody Express - Crear Cuenta</title>
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+        <style>
+            body {
+                background-color: #f8f9fa; /* Cambia el color de fondo */
+            }
+    
+            .container {
+                background-color: #ffffff; /* Color de fondo del contenedor */
+                padding: 20px;
+                border-radius: 10px;
+                box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Sombra suave */
+                margin-top: 50px;
+            }
+    
+            h1 {
+                color: #007bff; /* Color del texto */
+                text-align: center;
+                margin-bottom: 30px;
+            }
+    
+            label {
+                color: #495057; /* Color del texto del label */
+            }
+    
+            .btn-primary {
+                background-color: #007bff; /* Color del botón */
+                border-color: #007bff; /* Color del borde del botón */
+            }
+    
+            .btn-primary:hover {
+                background-color: #0056b3; /* Cambia el color al pasar el ratón */
+                border-color: #0056b3;
+            }
+        </style>
+    </head>
 <body>
 
     <div class="container mt-5">
+        <h1>Foody Express - Crear Cuenta</h1>
+
         <form action="/crearcuenta" method="post">
             <div class="form-group">
                 <label for="fname">Nombres:</label>
