#5 Modificación de HTML de pagina de Ingreso de Datos de Usuario

--- a/src/main/resources/templates/creacion.html
+++ b/src/main/resources/templates/creacion.html
@@ -42,7 +42,7 @@
 <body>
 
     <div class="container mt-5">
-        <h1>Foody Express - Crear Cuenta</h1>
+        <h1>Foody Express - Creación Cuenta</h1>
 
         <form action="/crearcuenta" method="post">
             <div class="form-group">
