--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -65,6 +65,7 @@
                 <button type="submit" class="btn btn-primary">Login</button>
             </form>
         </div>
+        <p><span th:text="${mensaje}"></span></p>
     </div>
 </div>
 </body>
