--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -100,6 +100,7 @@
             <button type="submit" class="btn btn-primary">Login</button>
         </form>
     </div>
+    <p><span th:text="${mensaje}"></span></p>
 </div>
 
 <p class="text-center">¡Explora y disfruta de la mejor comida en FoodieExpress!</p>
