--- a/src/main/resources/templates/creacion.html
+++ b/src/main/resources/templates/creacion.html
@@ -72,6 +72,7 @@
             <div class="form-group">
                 <label for="nickname">Nombre de Usuario:</label>
                 <input type="text" class="form-control" id="nickname" name="nickname" value="">
+                <p style="color:#FFA500"><span th:text="${mensaje}"></span></p>
             </div>
 
             <div class="form-group">
