--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -16,6 +16,7 @@
   <section class="container">
     <h2>Elige una comida</h2>
     <table class="table table-bordered">
+      <caption>Almuerzos</caption>
       <thead>
       <tr>
         <th>Nombre</th>
