--- a/src/main/resources/templates/lunch.html
+++ b/src/main/resources/templates/lunch.html
@@ -46,6 +46,7 @@
 <div class="container">
   <h1 class="text-center">Almuerzo</h1>
   <table class="table table-bordered">
+    <caption>Almuerzos</caption>
     <thead>
     <tr>
       <th>Horario</th>
