--- a/src/main/resources/templates/confirmacion.html
+++ b/src/main/resources/templates/confirmacion.html
@@ -40,7 +40,7 @@
         <p><strong>Nombres:</strong> <span th:text="${cliente.firstName}"></span></p>
         <p><strong>Apellidos:</strong> <span th:text="${cliente.lastName}"></span></p>
 
-        <p><strong>Nombre de usuario:</strong> <span th:text="${cliente.tipoId}"></span></p>
+        <p><strong>Nombre de usuario:</strong> <span th:text="${cliente.nickname}"></span></p>
         <p><strong>Comida Preferida 1:</strong> <span th:text="${cliente.comidaPreferidaUno}"></span></p>
         <p><strong>Comida Preferida 2:</strong> <span th:text="${cliente.comidaPreferidaDos}"></span></p>
         <p><strong>Comida Preferida 3:</strong> <span th:text="${cliente.comidaPreferidaTres}"></span></p>
